--- a/generators/app/templates/src/main/webapp/i18n/elasticsearch-reindex.json
+++ b/generators/app/templates/src/main/webapp/i18n/elasticsearch-reindex.json
@@ -2,6 +2,7 @@
     "elasticsearch": {
         "reindex": {
             "accepted": "Request accepted, performing full Elasticsearch reindexing.",
+            "acceptedSelected": "Request accepted, performing partial Elasticsearch reindexing.",
             "dialog": {
                 "title": "Confirm Elasticsearch Reindex",
                 "question": "Are you sure you want to reindex Elasticsearch? This could take a while!",
